# GExL

./: CMakeLists.txt  LICENSE  README.md  gexl-config.cmake.in  gexl-configversion.cmake.in
CMake/: Config.cmake  Macros.cmake
CMake/Modules/: FindGExL.cmake
cmake/Modules/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
examples/: CMakeLists.txt
examples/Case/: CMakeLists.txt  Case.cpp
examples/SDLAssets/: CMakeLists.txt  FontAsset.cpp  FontAsset.hpp  FontHandler.cpp  FontHandler.hpp  MusicAsset.cpp  MusicAsset.hpp  MusicHandler.cpp  MusicHandler.hpp  SDLAssets.cpp  Texture.cpp  Texture.hpp  TextureAsset.cpp  TextureAsset.hpp  TextureHandler.cpp  TextureHandler.hpp
include/GExL/: Config.hpp  GExL.hpp  GExL_types.hpp
include/GExL/assets/: AssetManager.hpp  IAssetHandler.hpp  TAsset.hpp  TAssetHandler.hpp
include/GExL/container/: TArray.hpp  TArray2D.hpp  TArray3D.hpp  TList.hpp
include/GExL/logger/: FatalLogger.hpp  FileLogger.hpp  ILogger.hpp  Log_macros.hpp  ScopeLogger.hpp  StringLogger.hpp  onullstream
include/GExL/utils/: MathUtil.hpp  Math_types.hpp  StringUtil.hpp  String_types.hpp  TParser.hpp  TTimer.hpp
src/GExL/: CMakeLists.txt
src/GExL/assets/: AssetManager.cpp  IAssetHandler.cpp
src/GExL/logger/: FatalLogger.cpp  FileLogger.cpp  ILogger.cpp  ScopeLogger.cpp  StringLogger.cpp
src/GExL/utils/: MathUtil.cpp  StringUtil.cpp
